# lcengine

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  app.py  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  conversation.py  document_processing.py  embeddings.py  models.py  pipeline.py  vector_store.py
app/vector_store/: __init__.py  base.py  faiss_store.py  sqlite_store.py
data/: evaluation_dataset.json
docs/: ROADMAP.md  v0.2_design.md
tests/: __init__.py  conftest.py  test_config.py  test_conversation.py  test_document_processing.py  test_embedding_service.py  test_faiss_store.py  test_integration.py  test_performance.py  test_rag_pipeline.py  test_vector_store.py
tests/data/: sample_ml_document.txt
