[project]
name = "lcengine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.9",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.2",
    "openai>=1.98.0",
    "ruff>=0.12.7",
]
