[project]
name = "lcengine"
version = "0.1.0"
description = "Native RAG system with gradual framework integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    # Core v0.1 dependencies - native implementation
    "faiss-cpu>=1.8.0",
    "openai>=1.98.0",
    "streamlit>=1.39.0",
    "pypdf>=4.0.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    # Development tools
    "ruff>=0.12.7",
    "pre-commit>=3.8.0",
    "pyright>=1.1.394",
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "psutil>=5.9.0",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY001",
    "COM812", # missing-trailing-comma
    "TD003",  # missing-todo-link

]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN001",  # missing-type-function-argument
    "ANN201",  # missing-return-type-undocumented-public-function
    "DOC201",  # docstring-missing-returns
    "D103",    # undocumented-public-function
    "DOC402",  # docstring-missing-yields
    "PLR2004", # magic-value-comparison
    "S101",    # assert
]

[tool.pyright]
include = ["app", "tests"]
pythonPlatform = "All"
typeCheckingMode = "standard"
reportMissingImports = false
reportMissingModuleSource = false
